# sigil

./: CMakeLists.txt
src/: arcana.h  arcana.pc.in  ast.c  overlay.c  parse.c  parser.c  pratt.c  sigil.h  sigil.pc.in  slice.c  state.c  table.c  token.c  tokens.c  types.h  util.c
tests/: monkey.cpp  monkey.h  monkey_debug.cpp  monkey_parse.cpp  parser.cpp  table.cpp  tokenize.cpp  tokens.cpp  util.cpp  util.h  utilities.cpp
